--- a/_config.yml
+++ b/_config.yml
@@ -22,10 +22,10 @@ source-code: https://github.com/WSaladQueenW/ARTH459_Virtual_Exhibition.git
 # title of site appears in banner
 title: ARTH 459 Virtual Exhibition
 # tagline, a short phrase that will appear throughout the site in the top banner
-tagline: Song-dynasty painting, The QingMing Scroll, Song Commerce, Song Economics
+tagline: Song-dynasty painting, The QingMing Scroll, Song Commerce, Song Economics, etc
 # description appears in meta tags and other locations
 # this description might appear in search result lists, keep around 160 characters max
-description: "asdasd"
+description: "good pictures"
 # creator of the digital collection, to appear in meta tags; we typically use our GitHub usernames but feel free to just use your name
 author: Francis Teng
 
@@ -34,7 +34,7 @@ author: Francis Teng
 #
 # Set the metadata for your collection (the name of the csv file in your _data directory that describes the objects in your collection)
 # Use the filename of your CSV **without** the ".csv" extension! E.g. _data/demo-metadata.csv --> "demo-metadata"
-metadata: arth
+metadata: arth-1
 
 ##########
 # Site/Organization Branding
