--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ title: ARTH 459 Virtual Exhibition
 tagline: Song-dynasty painting, The QingMing Scroll, Song Commerce, Song Economics, etc
 # description appears in meta tags and other locations
 # this description might appear in search result lists, keep around 160 characters max
-description: "good pictures"
+description: "good pictures checker"
 # creator of the digital collection, to appear in meta tags; we typically use our GitHub usernames but feel free to just use your name
 author: Francis Teng
 
@@ -34,7 +34,7 @@ author: Francis Teng
 #
 # Set the metadata for your collection (the name of the csv file in your _data directory that describes the objects in your collection)
 # Use the filename of your CSV **without** the ".csv" extension! E.g. _data/demo-metadata.csv --> "demo-metadata"
-metadata: qingming
+metadata: qingmingscrol
 
 ##########
 # Site/Organization Branding
